# auto-quartzy

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/: app.py  config.py  models.py  quartzy_upload.py
